--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
     <!-- 📘 Link para o arquivo de estilos CSS externo -->
     <link rel="stylesheet" href="styles.css" />
